--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
         <div class="photo">
             <img class="imginbw" src="../img/me-2.jpg">
             <p class="textbody" class="textwithimg">
-                I'm a currently a sophomore studying Computer Science and Engineering at the International Institute of
+                I'm a junior studying Computer Science and Engineering at the International Institute of
                 Information Technology, Hyderabad. I grew up in New Delhi, where I did my schooling from Amity
                 International School.<br>
                 I'm passionate about, <i>inter alia,</i> technology, learning, art and the human ability and will to
@@ -157,16 +157,17 @@
         <p class="quote">"If you want to go fast, go alone. If you want to go far, go with others."</p>
         <p class="textbody">
             Whether you believe we'll make a great team, or you just share my interests, you can drop me an email, ping
-            me on Facebook, connect with me on LinkedIn, or simply click the icon below to fill out a short-and-sweet
+            me on Facebook or Twitter, connect with me on LinkedIn, or simply click the icon below to fill out a short-and-sweet
             form and I'll get back to you, usually within a day.
         </p>
         <div class="contacticons">
             <a onclick="showTypeform()" title="Contact form"><i class="fas fa-sticky-note"></i></a>
-            <a href="https://www.linkedin.com/in/jiviteshjain" target="_blank" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook Profile"><i
+            <a href="https://www.linkedin.com/in/jiviteshjain" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/jiviteshjn" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook"><i
                     class="fab fa-facebook"></i></a>
             <a href="mailto:jiviteshjain@outlook.com" title="Email"><i class="fas fa-envelope"></i></a>
-            <a href="https://www.github.com/jiviteshjain" target="_blank" title="GitHub account"><i
+            <a href="https://www.github.com/jiviteshjain" target="_blank" title="GitHub"><i
                     class="fab fa-github"></i></a>
         </div>
     </div>
@@ -217,11 +218,12 @@
                     }
                 })()
             </script>
-            <a href="https://www.linkedin.com/in/jiviteshjain" target="_blank" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook Profile"><i
+            <a href="https://www.linkedin.com/in/jiviteshjain" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/jiviteshjn" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook"><i
                     class="fab fa-facebook"></i></a>
             <a href="mailto:jiviteshjain@outlook.com" title="Email"><i class="fas fa-envelope"></i></a>
-            <a href="https://www.github.com/jiviteshjain" target="_blank" title="GitHub account"><i
+            <a href="https://www.github.com/jiviteshjain" target="_blank" title="GitHub"><i
                     class="fab fa-github"></i></a>
         </div>
     </div>
