--- a/html/strengths.html
+++ b/html/strengths.html
@@ -91,11 +91,12 @@
                     }
                 })()
             </script>
-            <a href="https://www.linkedin.com/in/jiviteshjain" target="_blank" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook Profile"><i
+            <a href="https://www.linkedin.com/in/jiviteshjain" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/jiviteshjn" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook"><i
                     class="fab fa-facebook"></i></a>
             <a href="mailto:jiviteshjain@outlook.com" title="Email"><i class="fas fa-envelope"></i></a>
-            <a href="https://www.github.com/jiviteshjain" target="_blank" title="GitHub account"><i
+            <a href="https://www.github.com/jiviteshjain" target="_blank" title="GitHub"><i
                     class="fab fa-github"></i></a>
         </div>
     </div>
