--- a/html/form.html
+++ b/html/form.html
@@ -123,7 +123,7 @@
                 <a href="index.html"><span id="navat">@</span>jivitesh<span id="navjain">jain</span></a>
             </span>
             
-            <a class="social" id="mail" href="mailto:jiviteshjain@outlook.com"></a>
+            <a class="social" id="mail" href="mailto:jivitesh.jain@students.iiit.ac.in"></a>
             <a class="social" id="github" href="https://www.github.com/jiviteshjain" target="_blank"></a>
             <a class="social" id="facebook" href="https://www.facebook.com/jivitesh.jain.121" target="_blank"></a>
         </div>
