--- a/404.html
+++ b/404.html
@@ -88,7 +88,7 @@
             <a href="https://twitter.com/jiviteshjn" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
             <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook"><i
                     class="fab fa-facebook"></i></a>
-            <a href="mailto:jiviteshjain@outlook.com" title="Email"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:jivitesh.jain@students.iiit.ac.in" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="https://www.github.com/jiviteshjain" target="_blank" title="GitHub"><i
                     class="fab fa-github"></i></a>
         </div>
